--- a/.github/workflows/deploy-php.yml
+++ b/.github/workflows/deploy-php.yml
@@ -18,6 +18,18 @@ jobs:
       steps:
       - name: 🚚 Get latest code
         uses: actions/checkout@v2
+      
+      # - name: Create env file
+      #   run: |
+      #       touch .env
+      #       echo APP_NAME=MyAppName >> .env
+      #       echo APP_ENV=production >> .env
+      #       echo APP_DEBUG=false >> .env
+      #       echo LOG_CHANNEL=daily >> .env
+      #       echo DB_DATABASE=${{ secrets.DEV_DB_DATABASE }} >> .env
+      #       echo DB_USERNAME=${{ secrets.DEV_DB_USERNAME }} >> .env
+      #       echo DB_PASSWORD=${{ secrets.DEV_DB_PASSWORD }} >> .env
+      #       echo "!.env" > .git-ftp-include
 
       - name: 📂 Sync files
         uses: SamKirkland/FTP-Deploy-Action@4.3.0
