--- a/.github/workflows/deploy-php.yml
+++ b/.github/workflows/deploy-php.yml
@@ -29,47 +29,47 @@ env:
   PHP_VERSION: '8.x'                  # set this to the PHP version to use
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  # build:
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v3
+  #   steps:
+  #     - uses: actions/checkout@v3
 
-      - name: Setup PHP
-        uses: shivammathur/setup-php@7c0b4c8c8ebed23eca9ec2802474895d105b11bc
-        with:
-          php-version: ${{ env.PHP_VERSION }}
+  #     - name: Setup PHP
+  #       uses: shivammathur/setup-php@7c0b4c8c8ebed23eca9ec2802474895d105b11bc
+  #       with:
+  #         php-version: ${{ env.PHP_VERSION }}
 
-      - name: Check if composer.json exists
-        id: check_files
-        uses: andstor/file-existence-action@87d74d4732ddb824259d80c8a508c0124bf1c673
-        with:
-          files: 'composer.json'
+  #     - name: Check if composer.json exists
+  #       id: check_files
+  #       uses: andstor/file-existence-action@87d74d4732ddb824259d80c8a508c0124bf1c673
+  #       with:
+  #         files: 'composer.json'
 
-      - name: Get Composer Cache Directory
-        id: composer-cache
-        if: steps.check_files.outputs.files_exists == 'true'
-        run: |
-          echo "::set-output name=dir::$(composer config cache-files-dir)"
+  #     - name: Get Composer Cache Directory
+  #       id: composer-cache
+  #       if: steps.check_files.outputs.files_exists == 'true'
+  #       run: |
+  #         echo "::set-output name=dir::$(composer config cache-files-dir)"
 
-      - name: Set up dependency caching for faster installs
-        uses: actions/cache@v3
-        if: steps.check_files.outputs.files_exists == 'true'
-        with:
-          path: ${{ steps.composer-cache.outputs.dir }}
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-composer-
+  #     - name: Set up dependency caching for faster installs
+  #       uses: actions/cache@v3
+  #       if: steps.check_files.outputs.files_exists == 'true'
+  #       with:
+  #         path: ${{ steps.composer-cache.outputs.dir }}
+  #         key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+  #         restore-keys: |
+  #           ${{ runner.os }}-composer-
 
-      - name: Run composer install if composer.json exists
-        if: steps.check_files.outputs.files_exists == 'true'
-        run: composer validate --no-check-publish && composer install --prefer-dist --no-progress
+  #     - name: Run composer install if composer.json exists
+  #       if: steps.check_files.outputs.files_exists == 'true'
+  #       run: composer validate --no-check-publish && composer install --prefer-dist --no-progress
 
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v3
-        with:
-          name: php-app
-          path: .
+  #     - name: Upload artifact for deployment job
+  #       uses: actions/upload-artifact@v3
+  #       with:
+  #         name: php-app
+  #         path: .
 
   web-deploy:
       name: 🎉 Deploy
@@ -78,9 +78,21 @@ jobs:
       - name: 🚚 Get latest code
         uses: actions/checkout@v2
 
+      # - name: 📂 Sync files
+      #   uses: SamKirkland/FTP-Deploy-Action@4.3.0
+      #   with:
+      #     server: ${{ secrets.SERVIDORCETE }}
+      #     username: ${{ secrets.USUARIOTE }}
+      #     password: ${{ secrets.CONTRASENIA }}
+
       - name: 📂 Sync files
-        uses: SamKirkland/FTP-Deploy-Action@4.3.0
-        with:
-          server: ${{ secrets.SERVIDORCETE }}
-          username: ${{ secrets.USUARIOTE }}
-          password: ${{ secrets.CONTRASENIA }}
+      uses: kevinpainchaud/simple-ftp-deploy-action@v1.2.1
+      with:
+        ftp_host: ${{ secrets.SERVIDORCETE }}
+        ftp_username: ${{ secrets.USUARIOTE }}
+        ftp_password: ${{ secrets.CONTRASENIA }}
+        local_source_dir: "www"
+        dist_target_dir: "www"
+        delete: "true"
+        only_newer: "true"
+        # exclude: "'^logs/' '^README.md'"
