--- a/.github/workflows/deploy-php.yml
+++ b/.github/workflows/deploy-php.yml
@@ -1,106 +1,8 @@
-# This workflow will build and push a PHP application to an Azure Web App when a commit is pushed to your default branch.
-#
-# This workflow assumes you have already created the target Azure App Service web app.
-# For instructions see https://docs.microsoft.com/en-us/azure/app-service/quickstart-php?pivots=platform-linux
-#
-# To configure this workflow:
-#
-# 1. Download the Publish Profile for your Azure Web App. You can download this file from the Overview page of your Web App in the Azure Portal.
-#    For more information: https://docs.microsoft.com/en-us/azure/app-service/deploy-github-actions?tabs=applevel#generate-deployment-credentials
-#
-# 2. Create a secret in your repository named AZURE_WEBAPP_PUBLISH_PROFILE, paste the publish profile contents as the value of the secret.
-#    For instructions on obtaining the publish profile see: https://docs.microsoft.com/azure/app-service/deploy-github-actions#configure-the-github-secret
-#
-# 3. Change the value for the AZURE_WEBAPP_NAME. Optionally, change the AZURE_WEBAPP_PACKAGE_PATH and PHP_VERSION environment variables below.
-#
-# For more information on GitHub Actions for Azure: https://github.com/Azure/Actions
-# For more information on the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# For more samples to get started with GitHub Action workflows to deploy to Azure: https://github.com/Azure/actions-workflow-samples
-
-# name: Build and deploy PHP app to FTP
-
-# on:
-#   push:
-#     branches:
-#       - main
-#   workflow_dispatch:
-
-# env:
-#   PHP_VERSION: '8.x'                  # set this to the PHP version to use
-
-# jobs:
-  # build:
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #     - uses: actions/checkout@v3
-
-  #     - name: Setup PHP
-  #       uses: shivammathur/setup-php@7c0b4c8c8ebed23eca9ec2802474895d105b11bc
-  #       with:
-  #         php-version: ${{ env.PHP_VERSION }}
-
-  #     - name: Check if composer.json exists
-  #       id: check_files
-  #       uses: andstor/file-existence-action@87d74d4732ddb824259d80c8a508c0124bf1c673
-  #       with:
-  #         files: 'composer.json'
-
-  #     - name: Get Composer Cache Directory
-  #       id: composer-cache
-  #       if: steps.check_files.outputs.files_exists == 'true'
-  #       run: |
-  #         echo "::set-output name=dir::$(composer config cache-files-dir)"
-
-  #     - name: Set up dependency caching for faster installs
-  #       uses: actions/cache@v3
-  #       if: steps.check_files.outputs.files_exists == 'true'
-  #       with:
-  #         path: ${{ steps.composer-cache.outputs.dir }}
-  #         key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-  #         restore-keys: |
-  #           ${{ runner.os }}-composer-
-
-  #     - name: Run composer install if composer.json exists
-  #       if: steps.check_files.outputs.files_exists == 'true'
-  #       run: composer validate --no-check-publish && composer install --prefer-dist --no-progress
-
-  #     - name: Upload artifact for deployment job
-  #       uses: actions/upload-artifact@v3
-  #       with:
-  #         name: php-app
-  #         path: .
-
-  # web-deploy:
-  #     name: 🎉 Deploy
-  #     runs-on: ubuntu-latest
-  #     steps:
-  #     - name: 🚚 Get latest code
-  #       uses: actions/checkout@v2
-
-  #     # - name: 📂 Sync files
-  #     #   uses: SamKirkland/FTP-Deploy-Action@4.3.0
-  #     #   with:
-  #     #     server: ${{ secrets.SERVIDORCETE }}
-  #     #     username: ${{ secrets.USUARIOTE }}
-  #     #     password: ${{ secrets.CONTRASENIA }}
-
-  #     - name: 📂 Sync files
-  #     uses: kevinpainchaud/simple-ftp-deploy-action@v1.2.1
-  #     with:
-  #       ftp_host: ${{ secrets.SERVIDORCETE }}
-  #       ftp_username: ${{ secrets.USUARIOTE }}
-  #       ftp_password: ${{ secrets.CONTRASENIA }}
-  #       local_source_dir: "www"
-  #       dist_target_dir: "www"
-  #       delete: "true"
-  #       only_newer: "true"
-  #       # exclude: "'^logs/' '^README.md'"
 name: Deploy via ftp
 on: push
 jobs:
   deploy:
-    name: Deploy
+    name: Archivos
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -112,4 +14,21 @@ jobs:
         password: ${{ secrets.CONTRASENIA }}
         localDir: "."
         remoteDir: "."
-        options: "--delete --asci"
+  
+  build:
+    name: El puto vendor
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Instalando Vendor
+      uses: php-actions/composer@v6
+      
+    - name: Upload ftp
+      uses: sebastianpopp/ftp-action@releases/v2
+      with:
+        host: ${{ secrets.SERVIDORCETE }}
+        user: ${{ secrets.USUARIOTE }}
+        password: ${{ secrets.CONTRASENIA }}
+        localDir: "vendor"
+        remoteDir: "vendor"
