--- a/.github/workflows/SQLite_Commands.yml
+++ b/.github/workflows/SQLite_Commands.yml
@@ -3,8 +3,8 @@ name: Execute SQLite Commands
 on:
   push:
     paths:
-      - 'mis_ordenes.txt'  # Ejecutar el action cuando se modifique el archivo de órdenes
-      - 'Publicaciones.sqlite'     # Ejecutar el action cuando se modifique la base de datos SQLite
+      - './zzcatalogoweb/mis_ordenesZZ.txt'  # Ejecutar el action cuando se modifique el archivo de órdenes
+      - './zzcatalogoweb/PublicacionesZZ.sqlite'     # Ejecutar el action cuando se modifique la base de datos SQLite
 
 jobs:
   execute-commands:
@@ -21,42 +21,20 @@ jobs:
 
       - name: Execute SQLite commands from file
         run: |
-          sqlite3 Publicaciones.sqlite < mis_ordenes.txt
-
-      - name: List output directory
-        run: ls -l output
-
-      - name: Get repository size
-        id: get_size  # Asignar un ID al paso para referenciarlo más tarde
-        run: |
-          SIZE=$(curl -s https://api.github.com/repos/kudomarkos/maldiciones | jq .size)
-          SIZE_MB=$(echo "scale=2; $SIZE / 1024" | bc)
-          echo "size_mb=$SIZE_MB" >> $GITHUB_ENV  # Exportar la variable como variable de entorno
-
-      - name: Update README
-        run: |
-          # Vaciar el README.md y añadir nuevo contenido
-          echo "# Maldiciones" > README.md
-          echo "" >> README.md
-          echo "[https://kudomarkos.github.io/maldiciones/](https://kudomarkos.github.io/maldiciones/)" >> README.md
-          echo "" >> README.md
-          echo "![logo](./static_images/logo_maldiciones.png)" >> README.md
-          echo "" >> README.md
-          echo "## Tamaño del Repositorio" >> README.md
-          echo "El tamaño de este repositorio es aproximadamente $size_mb MB." >> README.md
+          sqlite3 ./zzcatalogoweb/Publicaciones.sqlite < ./zzcatalogoweb/mis_ordenesZZ.txt
 
       - name: Commit and push output directory
         run: |
           CURRENT_DATE=$(date '+%Y-%m-%d %H:%M:%S')  # Obtener la fecha actual
-          if [ -n "$(ls -A output 2>/dev/null)" ]; then
+          if [ -n "$(ls -A ./zzcatalogoweb/output 2>/dev/null)" ]; then
             git config --local user.name "github-actions"
             git config --local user.email "github-actions@github.com"
-            git add README.md
-            git add output/
-            git commit -m "Update files in output directory - $CURRENT_DATE"
+            git add .
+            git commit -m "Update files in ./zzcatalogoweb/output directory - $CURRENT_DATE"
             git push
           else
-            echo "No files to commit in output directory."
+            echo "No files to commit in ./zzcatalogoweb/output directory."
           fi
+
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
