--- a/.github/workflows/update-repo-size.yml
+++ b/.github/workflows/update-repo-size.yml
@@ -43,12 +43,8 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions"
+          git config --local user.email "github-actions@github.com"
           git add README.md
-          if git diff --staged --quiet; then
-            echo "No changes to commit"
-            exit 0
-          fi
           git commit -m "chore: rebuild README with repo size ${ { { SIZE } } } MB [ci skip]"
           git push
