--- a/.github/workflows/update-repo-size.yml
+++ b/.github/workflows/update-repo-size.yml
@@ -31,6 +31,7 @@ jobs:
       - name: Rebuild README.md
         run: |
           SIZE="${{ steps.get_size.outputs.size_mb }}"
+          MIPESO=$(du -sh --exclude='.git' . | awk '{print $1}')
           NOW=$(date '+%Y-%m-%d %H:%M:%S')
           echo "# Maldiciones" > README.md
           echo "" >> README.md
@@ -39,7 +40,8 @@ jobs:
           echo "![logo](./static_images/logo_maldiciones.png)" >> README.md
           echo "" >> README.md
           echo "## Tamaño del Repositorio" >> README.md
-          echo "El tamaño de este repositorio es aproximadamente ${SIZE} MB. (Actualizado: ${NOW})" >> README.md
+          echo "El tamaño de este repositorio es aproximadamente ${SIZE} MB. (Actualizado: ${NOW})" >> README.md          
+          echo "El tamaño de MIS carpetas es aproximadamente ${MIPESO}B." >> README.md
 
       - name: Commit and push changes
         run: |
